# cvpainter

./: CMakeLists.txt  README.md
src/: gstcvpainter.cpp  gstcvpainter.h
